# lxqt-plugin-themeswitch

./: CMakeLists.txt  README.md  lxqt-plugin-themeswitch.kdev4
resources/: loremipsum.desktop  themeswitcher.desktop
src/: loremipsumbutton.cpp  loremipsumbutton.h  lxqtloremipsum.cpp  lxqtloremipsum.h  lxqtthemeswitcher.cpp  lxqtthemeswitcher.h  switchersettings.cpp  switchersettings.h  themeswitcherbutton.cpp  themeswitcherbutton.h
